--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,13 @@
     font-family: "Montserrat", sans-serif;
 }
 
-@plugin "daisyui" {
-    themes: light --default, dark --black;
-}
+@custom-variant dark (&:where(.dark, .dark *));
+
+@plugin "daisyui"
 
 @plugin "daisyui/theme" {
-    name: "light";
-    default: true;
+    /* name: "light"; */
+    /* default: true; */
     --color-primary: #2C3892;
     --color-secondary: #FA951E;
 }
